# Project-GSCX-Emulator

./: .gitignore  build_cpp.ps1  run_gui.ps1
cpp/: CMakeLists.txt
cpp/core/src/: decoder.cpp
cpp/modules/recovery/: CMakeLists.txt
cpp/modules/recovery/src/: recovery.cpp
dotnet/Spoofing/: Spoofing.csproj
python/gscx_gui/: app.py  main_window.py  modules_loader.py
